--- a/my-app/src/app/page.css
+++ b/my-app/src/app/page.css
@@ -1,7 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);
 
-
+*{
+  margin: 0;
+  padding: 0;
+}
 .main {
   display: flex;
   flex-direction: column;
@@ -9,6 +12,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwallpapersafari.com%2Fw%2FSTnexc&psig=AOvVaw3MyPZO9dHspoC59MJFxKmW&ust=1705585509254000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLDbzqfH5IMDFQAAAAAdAAAAABAU');
 }
 
 .widget {
@@ -18,7 +22,7 @@
   height: 500px;
   width: 500px;
   transform: translate(-50%, -50%);
-  background: linear-gradient(120deg, #06022e, #0b0985, #141eda);
+  background: linear-gradient(120deg, #06022ec8, #08076743, #02053a5a);
   cursor: pointer;
   border-radius: 20px;
   box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3), 0 17px 17px 0 rgba(0, 0, 0, 0.15);
@@ -49,7 +53,7 @@
   align-items: center;
   justify-content: space-around;
   font-size: 100px;
-  color: white
+  color: rgb(0, 0, 0)
 }
  .widget .weatherIcon i {
   padding-top: 30px;
@@ -77,21 +81,21 @@
 }
 .temperature {
   font-size: 55px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .place {
   text-align: center;
   font-size: 35px;
   margin-top: 70px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .weatherCondition {
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .date {
   text-align: center;
   font-size: 20px;
   margin-top: 20px;
-  color: white;
+  color: rgb(0, 0, 0);
 
 }
